# coinbalance

./: .env.example  .gitignore  CHANGELOG.md  PACKAGE_MANIFEST.json  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
backend/: requirements.txt
backend/app/: __init__.py  cli.py  config.py
backend/tests/: test_evidence_reconciliation.py  test_hardware_api.py  test_health.py  test_integrity_journal.py  test_rbac_audit.py
compliance/: checklist-novas-funcionalidades.md  classificacao-dados.md  linguagem-permitida-proibida.md
docs/: README.md  documentation-standard.md  repository-organization.md
docs/administrative/: contacts.txt
docs/adr/: ADR-001-monolito-modular.md  ADR-002-anti-escopo-regulado.md  ADR-003-flask-postgresql.md  ADR-004-versionamento-estruturado-e-estrutura-de-raiz.md  ADR-005-identidade-rbac-auditoria-persistente.md
docs/architecture/: arquitetura-alto-nivel.md  matriz-modelos.md
docs/compliance/: README.md
docs/governance/: ai-policy.md
docs/institutional/: README.md  clausula-nao-caracterizacao-regulada.md  positioning.md  resiliencia-institucional.md
docs/roadmap/: kpis-dashboard.md  roadmap-6m.md
docs/telemetry/: event-schema.json  pipeline-spec.md
frontend/: README.md
infra/docker/: backend.Dockerfile
infra/nginx/: README.md
infra/postgres/: README.md
migrations/: env.py
migrations/versions/: 20260520_0001_identity_audit_foundation.py  20260520_0002_reconciliation_rules_runs.py
security/: incident-response-playbook.md  secrets-policy.md  secure-development-policy.md  threat-model.md
(+25 files in other folders)
