[project]
name = "coinbalance"
version = "0.2.0a0"
description = "CoinBalance - plataforma tecnológica de inteligência operacional, governança, rastreabilidade e reconciliação informacional."
requires-python = ">=3.11"
authors = [{ name = "CoinBalance" }]
readme = "README.md"

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
pythonpath = ["backend"]

[tool.ruff]
line-length = 100
target-version = "py311"
